--- a/index.html
+++ b/index.html
@@ -11,6 +11,209 @@
       <hr>
 
 <body>
+	<style>
+		html{
+	margin:auto:;
+
+	}
+	body{
+	background-color:black;
+	color:white;
+	margin: auto;
+}
+h1{
+	text-align: center;
+	text-transform: capitalize;
+	color: red;
+	font-size: 50px;
+	font-family: ARABIC;
+
+	padding-bottom: 0.2cm;
+}
+
+.c1{
+
+	text-align: center;
+	color: #0A7D72;
+
+}
+.c2{
+
+	text-align: left;
+	margin-left: 50px;
+	color:red ;
+	font-weight: bolder;
+	font-family:  times new roman;
+	text-transform: capitalize;
+	text-shadow:white;
+	font-size: 40px;
+}
+.main ul{
+    padding-left: 80px;
+    padding-top: 30px;
+    color:white;
+    font-size: 25px;
+    text-shadow:black;
+    line-height: 1cm;
+    font-style:italic;
+    
+    text-decoration: unset;
+}
+.c3{
+	color: red;
+	padding-left: 0.90cm;
+	font-family: times new roman;
+	font-size: 30px;
+}
+.c4{
+	color: white;
+	margin:auto;
+	line-height:1cm;
+	letter-spacing:0.1cm;
+	font-style:italic;
+}
+
+.c6 H3{
+	color:grey;
+	text-align:center;
+	font-size: 30px;
+	padding-left: 130px;
+	font-style:bold;
+	}
+
+.c6 H2{
+	color:grey;
+	font-size: 30px;
+	padding-left: 160px;
+	font-style:bold;
+	text-align: center;
+	}
+
+.c8 TH{ 
+	text-align: right;
+	color:#2D849B;
+	font-size: 20px;
+	padding-left:80px;
+	font-style:initial;
+	}
+.c9 TH { 
+	text-align: right;
+	color:#2D849B;
+	font-size: 20px;
+	padding-left:80px;
+	font-style:initial;
+	}
+.c10  TH{ 
+    text-align: right;
+	color:#2D849B;
+	font-size: 20px;
+	padding-left:3cm;
+	font-style:initial;
+	}
+.hea{
+	text-align: left;
+	font-size: 30px;
+}
+
+
+
+.must input{
+
+	background-color: black;
+	color: white;
+	font-size:20PX;
+
+}
+.most must input{
+
+	background-color: black;
+	color: white;
+	font-size:30PX;
+
+}
+.most input{
+	background-color:black;
+	color: white;
+	font-size: 20px;
+	}
+.most label{
+
+	font-size: 20px;
+	}
+
+
+	.f4 label{
+
+color:white;
+padding-bottom: 0.1cm;
+display: block;
+	}
+	.f4 select{
+background-color: black;
+color: white;
+	}
+	.f3 label{
+
+		display:block;
+
+color:white;
+padding-bottom: 0.1cm;
+	}
+	.f3 input{
+		
+		size: 20px;
+background-color: black;
+color:white;
+}
+.f5 input{
+	background-color: black;
+	color: white;
+	display: block;
+}
+	a:hover{
+		color: blue;
+	}
+	a:visited{
+		color: green;
+	}
+a{
+	text-decoration: none;
+}
+.main{
+	background-image: url("inshot1.jpg");
+	background-size: 1260px 230px;
+
+}
+	
+
+
+.BOX1{
+	text-align: center;
+	font-size: 5PX;
+	color:grey;
+}
+
+.BOX2{
+	text-align: center;
+	font-size: 5PX;
+	color:grey;
+}
+
+.BOX3{
+	text-align: center;
+	font-size: 5PX;
+	color:grey;
+}
+.vera {
+	background-image: url("reddy.jpg");
+	background-size: 1350px 330px;
+
+
+
+	
+
+}
+	</style>
 	
 		<div class="container">
 
